--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,23 +1,25 @@
 name: Playwright Tests
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: 
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Run Playwright tests
-        run: npx playwright test
+    - name: Install Playwright browsers
+      run: npx playwright install
+
+    - name: Run tests
+      run: npx playwright test
