--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,18 +8,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install Playwright browsers
-      run: npx playwright install
+      - name: Install Playwright browsers
+        run: npx playwright install
 
-    - name: Run tests
-      run: npx playwright test
+      - name: Run Playwright tests
+        shell: pwsh
+        run: |
+          $env:ENV="test"
+          npx playwright test
