--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,28 +1,41 @@
 name: Playwright Tests
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Install Playwright browsers
-        run: npx playwright install
+    - name: Install Playwright browsers
+      run: npx playwright install
 
-      - name: Run Playwright tests
-        shell: pwsh
-        run: |
-          $env:ENV="test"
-          npx playwright test
+    - name: Run Playwright tests
+      
+      run: |
+        $env:ENV="test"
+        npx playwright test --timeout=120000
+      shell: pwsh
+
+  
+    - name: Upload test artifacts on failure
+      if: failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: playwright-artifacts
+        path: |
+          test-results/**/*.png
+          test-results/**/*.mp4
+          test-results/**/*.zip
