--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,15 @@
 name: Playwright Tests
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Запуск по кнопке вручную
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
@@ -24,15 +25,5 @@ jobs:
     - name: Run Playwright tests
       run: |
         $env:ENV="test"
-        npx playwright test --timeout=120000
+        npx playwright test
       shell: pwsh
-
-    - name: Upload test artifacts on failure
-      if: failure()
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: playwright-artifacts
-        path: |
-          test-results/**/*.png
-          test-results/**/*.mp4
-          test-results/**/*.zip
